# synapsesignature

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  Tutorial.ipynb  conf.py  example.ipynb  make.bat
src/synapsesignature/: __init__.py
src/synapsesignature/data/: Ohetal_ST11.csv
tests/: test_pycounts.py  test_synapsesignature.py
