[tool.poetry]
name = "synapsesignature"
version = "0.1.0"
description = "Derive pplasma signature of cognitive impairment using SomaScaan plasma proteomics data"
authors = ["Hamilton Oh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
matplotlib = "3.4.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
jupyter = "^1.1.1"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
